<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app">DirectBroking</string>
    <string name="app_name">Direct Broking</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="PasswordHint">password</string>
    <string name="LoginHint">Account No.</string>
    <string name="UsernameHint">Or login with your username</string>
    <string name="DblLogo">Direct Broking Logo</string>
    <string name="LoginButton">Login Button</string>
    <string name="NzxLogo">NZX Logo</string>
    <string name="MyPortfolio">My Portfolio</string>
    <string name="MyOrders">My Orders</string>
    <string name="MyAccount">My Account</string>
    <string name="AboutUs">About Direct Broking</string>

    <color name="grey">#ffe6e6e6</color>
    <color name="red">#cf142b</color>
    <color name="dark_grey">#cccccc</color>
    <color name="black">#000000</color>

    <string name="textview">TextView</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_dbtext_view">DBTextView</string>
    <string name="title_activity_table_view">TableView</string>
    <string name="Signout">Sign out</string>
    <string name="portfoliotab">Portfolio</string>
    <string name="account">Account</string>
    <string name="hello">TODO</string>
    <string name="portfolio"> My Portfolio</string>
    <string name="main_no_items">TODO</string>
    <string name="stock">Stock Code</string>
    <string name="costPrice">Cost Price</string>
    <string name="marketPrice">Market Price</string>
    <string name="marketvalue">Market Value</string>
    <string name="up_down_market_value">Market value profit or loss</string>
    <string name="profitLoss">Profit/Loss NZD</string>
    <string name="title_activity_my_orders">MyOrders</string>
    <string name="remainingorder">Remaining Order</string>
    <string name="title_activity_my_account">MyAccount</string>
    <string name="balance">Balance</string>
    <string name="interestrate">Rate</string>
    <string name="currency">CCY</string>

</resources>