<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    android:screenOrientation="portrait"
    android:gravity="center_horizontal" >
    
    <ImageView
        android:id="@+id/DblLogo"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        android:src="@drawable/dbl_logo_small_grey" 
        android:contentDescription="@string/DblLogo"/>

    <EditText
        android:id="@+id/AccountNo"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/DblLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:hint="@string/LoginHint"
        android:inputType="text"
        android:state_focused="true"
        android:color="@color/red" >

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AccountNo"
        android:layout_centerHorizontal="true"
        android:text="@string/UsernameHint"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AccountNo"
        android:layout_alignRight="@+id/AccountNo"
        android:layout_below="@+id/Username"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/PasswordHint"
        android:imeOptions="actionDone"
        android:inputType="textPassword" >

    </EditText>

    <ImageButton
        android:id="@+id/LoginButton"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_login"
        android:contentDescription="@string/LoginButton"
        android:onClick="displayAlert" />

    <ImageView
        android:id="@+id/NzxLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/NzxLogo"
        android:src="@drawable/mpi_nzx" />

</RelativeLayout>